--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,10 +4,12 @@ services:
   vote:
     build: ./vote
     command: python app.py
+    environment:
+      - REDIS_PASSWORD=redis_password
     volumes:
      - ./vote:/app
     ports:
-      - "5000:80"
+      - "5000:8080"
     networks:
       - front-tier
       - back-tier
@@ -33,6 +35,7 @@ services:
   redis:
     image: redis:alpine
     container_name: redis
+    command: redis-server --requirepass redis_password
     ports: ["6379"]
     networks:
       - back-tier
@@ -40,6 +43,10 @@ services:
   db:
     image: postgres:9.4
     container_name: db
+    environment:
+      - POSTGRES_DB=postgres
+      - POSTGRES_USER=postgres_user
+      - POSTGRES_PASSWORD=postgres_password
     volumes:
       - "db-data:/var/lib/postgresql/data"
     networks:
